fix: close button search ar z-index

--- a/src/app/pages/dashboard/header-dashboard/search-bar/search-bar.component.scss
+++ b/src/app/pages/dashboard/header-dashboard/search-bar/search-bar.component.scss
@@ -30,6 +30,7 @@ input {
 }
 
 .close {
+  z-index: 1001;
   cursor: pointer;
   height: 40px;
   aspect-ratio: 1;
